@@ -6,6 +6,7 @@ Changelog
 
 - Fixed margins of search results. #REC-985
 - Author Search: Added links to other portals. #REC-988
+- Author Search: Only show "and comments" if commenting enabled. #REC-987
 - Fixed first heading in firefox. #REC-993
 - Custom text for topic browsing. #REC-986
 
